--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+﻿<!DOCTYPE html>
 <html>
-<head> 
-<title> </title>
+<head>
+    <meta charset="utf-8" />
+    <title></title>
 </head>
 <body>
-<a href="HtmlPage1.html"> open </a>
+    <a href="HtmlPage1.html"> open</a>
 </body>
 </html>
